updated styling to prevent cards from overlapping as screen size decreased.

--- a/assets/CSS/styles.css
+++ b/assets/CSS/styles.css
@@ -37,6 +37,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }.image-text {
   display: flex;
   justify-content: center;
@@ -81,20 +82,17 @@ footer {
 
 .resultCards {
   display: none;
-  flex-direction: row;
-  flex:auto;
-  justify-content: space-between;
-  align-items: center;
 }
 
-.card header {
-  padding: 20px;
-  background: #13293d;
-  color: #fff;
+
+.card {
+  margin: 1rem;
 }
+
 
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.767);
 }
+
 
 
